<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="logout">Đăng xuất</string>
    <string name= "login">Đăng Nhập</string>
    <string name="register">Đăng ký</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="confirmPassword">Nhập lại mật khẩu</string>
    <string name="loginNow">Nhấp vào đây để đăng nhập!</string>
    <string name = "registerNow">Bạn chưa có tài khoản? Đăng ký.</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>